Added a few images of various beers.Working on main page.

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+    <header>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="index.html">Főoldal</a></li>
+                <li><a href="gallery.html">Galéria</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="main-wrapper">
+            asd
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
