--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Főoldal</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" id="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="img/png" href="img/favicon.jpg">
+    <script src="js/theme-changer.js"></script>
 </head>
 
 <body>
@@ -16,6 +17,7 @@
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
                 <li><a href="gallery.html">Galéria</a></li>
+                <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">Change Theme</button>
             </ul>
         </nav>
     </header>
