Changed overall light theme, added About Us page.

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -7,7 +7,7 @@
     <title>Főoldal</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" id="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="img/png" href="img/favicon.jpg">
+    <link rel="shortcut icon" type="img/png" href="images/favicon.jpg">
     <script src="js/theme-changer.js"></script>
 </head>
 
@@ -17,19 +17,24 @@
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
                 <li><a href="gallery.html">Galéria</a></li>
-                <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">Change Theme</button>
+                <li><a href="about-us.html">Rólunk</a></li>
+                <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">Change
+                    Theme</button>
             </ul>
         </nav>
+        <div class="nav-bar-bottom-border"></div>
     </header>
 
     <main>
         <div class="main-wrapper">
             <h2>Üdv a főoldalon!</h2> <br>
-            
+
             <section class="description">
                 <h3>Miről szól az oldal?</h3>
-                <p>Célunk egy galéria létrehozása, ahol különböző, hazánkban, első sorban Debrecenben is kapható sörfajtákat jelenítünk meg.</p> <br>
-                <p>Különböző sörökről készült fényképeket mutatunk be, melléjük leírást illesztve, amiben leírjuk, hogy az általunk kedvelt Debreceni kocsmákban hol kaphatóak, és egyéb információkat.
+                <p>Célunk egy galéria létrehozása, ahol különböző, hazánkban, első sorban Debrecenben is kapható
+                    sörfajtákat jelenítünk meg.</p> <br>
+                <p>Különböző sörökről készült fényképeket mutatunk be, melléjük leírást illesztve, amiben leírjuk, hogy
+                    az általunk kedvelt Debreceni kocsmákban hol kaphatóak, és egyéb információkat.
                 </p>
             </section>
         </div>
