Dividing index.html up to sections rather than using gallery.html and about-us.html

--- a/rootfolder/gallery.html
+++ b/rootfolder/gallery.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galéria</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" id="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <link rel="shortcut icon" type="img/png" href="images/favicon.jpg">
     <script src="js/gallery-theme-changer.js"></script>
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav class="nav-bar"">
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
                 <li><a href="gallery.html">Galéria</a></li>
@@ -27,14 +27,67 @@
     </header>
 
     <main>
-        <div class="main-wrapper">
-
-            <div class="image-gallery">
-                <a href="images/soproni-vilagos.jpg" data-lightbox="mygallery" data-title="Soproni klasszikus világos sör"  ><img src="images/soproni-vilagos.jpg"></a>
-                <a href="images/soproni-meggy.jpg" data-lightbox="mygallery" data-title="Soproni óvatos duhaj meggyes"><img src="images/soproni-meggy.jpg"></a>
-                <a href="images/soproni-ipa.jpg" data-lightbox="mygallery" data-title="Soproni óvatos duhaj ipa"><img src="images/soproni-ipa.jpg"></a>
-            </div>
-
+        <div class="gallery-main-wrapper">
+            <ul class="beer-showcase">
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/1.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/1.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/2.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/2.JPG">
+                        </a>
+                    </figure>                   
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/3.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/3.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/4.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/4.JPG">
+                        </a> 
+                    </figure>
+                </li>
+            </ul>
+            <ul class="beer-showcase">
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/11.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/11.JPG">
+                        </a> 
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/12.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/12.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/13.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/13.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/14.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/14.JPG">
+                        </a>
+                    </figure>
+                </li>
+            </ul>
         </div>
     </main>
 
@@ -45,3 +98,6 @@
 </body>
 
 </html>
+
+
+
