Added all photos to index.html

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -103,6 +103,89 @@
                     </figure>
                 </li>
             </ul>
+            <ul class="beer-showcase">
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/21.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/21.JPG">
+                        </a> 
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/22.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/22.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/23.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/23.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/24.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/24.JPG">
+                        </a>
+                    </figure>
+                </li>
+            </ul>
+            <ul class="beer-showcase">
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/41.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/41.JPG">
+                        </a> 
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/42.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/42.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/43.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/43.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/44.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/44.JPG">
+                        </a>
+                    </figure>
+                </li>
+            </ul>
+            <ul class="beer-showcase">
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/31.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/31.JPG">
+                        </a> 
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/32.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/32.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/34.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/34.JPG">
+                        </a>
+                    </figure>
+                </li>
+            </ul>
         </div>
     </section>
 
