Developing the gallery section

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -25,25 +25,26 @@
         </nav>
         <div class="nav-bar-bottom-border"></div>
     
-        <main>
-            <div class="main-wrapper">
-                <h2>Üdv a főoldalon!</h2> <br>
+        <div class="main-wrapper">
+            <h2>Üdv a főoldalon!</h2> <br>
 
-                <section class="description">
-                    <h3>Miről szól az oldal?</h3>
-                    <p>Célunk egy galéria létrehozása, ahol különböző, hazánkban, első sorban Debrecenben is kapható
+            <section class="description">
+                <h3>Miről szól az oldal?</h3>
+                <p>Célunk egy galéria létrehozása, ahol különböző, hazánkban, első sorban Debrecenben is kapható
                         sörfajtákat jelenítünk meg.</p> <br>
-                    <p>Különböző sörökről készült fényképeket mutatunk be, melléjük leírást illesztve, amiben leírjuk, hogy
+                <p>Különböző sörökről készült fényképeket mutatunk be, melléjük leírást illesztve, amiben leírjuk, hogy
                         az általunk kedvelt Debreceni kocsmákban hol kaphatóak, és egyéb információkat.
-                    </p>
-                </section>
-            </div>
-        </main>
+                </p>
+            </section>
+        </div>
     </header>
 
     <section class="section-gallery" id="gallery">
         <div class="gallery-main-wrapper">
-            <ul class="beer-showcase">
+            <h2>Galéria</h2>
+            <h3>Milyen sörök találhatók itt?</h3>
+            <p>A képeken általunk kedvelt Debreceni kocsmákban kapható sörök láthatóak</p>
+            <ul class="beer-showcase clearfix">
                 <li>
                     <figure class="beer-photo">
                         <a href="images/1.JPG" data-lightbox="mygallery" data-title="proba">
@@ -56,7 +57,7 @@
                         <a href="images/2.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/2.JPG">
                         </a>
-                    </figure>                   
+                    </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
@@ -69,16 +70,14 @@
                     <figure class="beer-photo">
                         <a href="images/4.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/4.JPG">
-                        </a> 
+                        </a>
                     </figure>
                 </li>
-            </ul>
-            <ul class="beer-showcase">
                 <li>
                     <figure class="beer-photo">
                         <a href="images/11.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/11.JPG">
-                        </a> 
+                        </a>
                     </figure>
                 </li>
                 <li>
@@ -102,13 +101,11 @@
                         </a>
                     </figure>
                 </li>
-            </ul>
-            <ul class="beer-showcase">
                 <li>
                     <figure class="beer-photo">
                         <a href="images/21.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/21.JPG">
-                        </a> 
+                        </a>
                     </figure>
                 </li>
                 <li>
@@ -132,13 +129,11 @@
                         </a>
                     </figure>
                 </li>
-            </ul>
-            <ul class="beer-showcase">
                 <li>
                     <figure class="beer-photo">
                         <a href="images/41.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/41.JPG">
-                        </a> 
+                        </a>
                     </figure>
                 </li>
                 <li>
@@ -162,13 +157,11 @@
                         </a>
                     </figure>
                 </li>
-            </ul>
-            <ul class="beer-showcase">
                 <li>
                     <figure class="beer-photo">
                         <a href="images/31.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/31.JPG">
-                        </a> 
+                        </a>
                     </figure>
                 </li>
                 <li>
@@ -182,6 +175,13 @@
                     <figure class="beer-photo">
                         <a href="images/34.JPG" data-lightbox="mygallery" data-title="proba">
                             <img src="images/34.JPG">
+                        </a>
+                    </figure>
+                </li>
+                <li>
+                    <figure class="beer-photo">
+                        <a href="images/33.JPG" data-lightbox="mygallery" data-title="proba">
+                            <img src="images/33.JPG">
                         </a>
                     </figure>
                 </li>
