Small appearance improvements, including font sizes, and background color.

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <header>
+    <header id="home-page">
         <nav class="nav-bar">
             <ul>
-                <li><a href="index.html">Főoldal</a></li>
+                <li><a href="#home-page">Főoldal</a></li>
                 <li><a href="#gallery">Galéria</a></li>
                 <li><a href="#about-us">Rólunk</a></li>
                 <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">ChangeTheme</button>
@@ -43,7 +43,8 @@
         <div class="gallery-main-wrapper">
             <h2>Galéria</h2>
             <h3>Milyen sörök találhatók itt?</h3>
-            <p>A képeken általunk kedvelt Debreceni kocsmákban kapható sörök láthatóak</p>
+            <p>A képeken általunk kedvelt Debreceni kocsmákban kapható sörök láthatóak.</p>
+            <p>A képgaléria további fejlesztések előtt áll.</p>
             <ul class="beer-showcase clearfix">
                 <li>
                     <figure class="beer-photo">
