Added about us page to index.html

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -191,7 +191,27 @@
     </section>
 
     <section class="section-about-us" id="about-us">
-
+        <div class="main-wrapper">
+            <h1><center>A Fejlesztő Csapat</center></h1>
+            <div class="us-gallery">
+                <div class="inline-block">
+                    <img src="images/pm.jpg" alt="alt-text">
+                    <p>Pócsi Máté</p>
+                </div>
+                <div class="inline-block">
+                    <img src="images/bim.jpg" alt="alt-text">
+                    <p>Bene Imre</p>
+                </div>
+                <div class="inline-block">
+                    <img src="images/lt.jpg" alt="alt-text">
+                    <p>Loós Tamás</p>
+                </div>
+                <div class="inline-block">
+                    <img src="images/sm.jpg" alt="alt-text">
+                    <p>Stiegelmayer Máté</p>
+                </div>     
+            </div>
+        </div>
     </section>
 
     <footer>
