--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -210,6 +210,7 @@
                     <p>Stiegelmayer Máté</p>
                 </div>     
             </div>
+            <p><h3>„A sör a bizonyíték arra, hogy az Isten szeret minket, és azt akarja, hogy boldogok legyünk.”</h3></p>
         </div>
     </section>
 
