Added names to every Beer

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -47,140 +47,140 @@
             <ul class="beer-showcase clearfix">
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/1.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/1.JPG" data-lightbox="mygallery" data-title="Miller">
                             <img src="images/1.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/2.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/2.JPG" data-lightbox="mygallery" data-title="Staropramen">
                             <img src="images/2.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/3.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/3.JPG" data-lightbox="mygallery" data-title="Mort Subite">
                             <img src="images/3.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/4.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/4.JPG" data-lightbox="mygallery" data-title="Soproni - IPA">
                             <img src="images/4.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/11.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/11.JPG" data-lightbox="mygallery" data-title="Borsodi - Hoppy">
                             <img src="images/11.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/12.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/12.JPG" data-lightbox="mygallery" data-title="Gösser - Natur Radler">
                             <img src="images/12.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/13.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/13.JPG" data-lightbox="mygallery" data-title="Kőbányai">
                             <img src="images/13.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/14.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/14.JPG" data-lightbox="mygallery" data-title="Desperados">
                             <img src="images/14.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/21.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/21.JPG" data-lightbox="mygallery" data-title="Csíki - Áfonya">
                             <img src="images/21.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/22.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/22.JPG" data-lightbox="mygallery" data-title="Dreher - Hideg Komlós">
                             <img src="images/22.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/23.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/23.JPG" data-lightbox="mygallery" data-title="Szent András - Áfonyás Ale">
                             <img src="images/23.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/24.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/24.JPG" data-lightbox="mygallery" data-title="Edelweiss">
                             <img src="images/24.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/41.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/41.JPG" data-lightbox="mygallery" data-title="Stella Artois">
                             <img src="images/41.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/42.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/42.JPG" data-lightbox="mygallery" data-title="Corona">
                             <img src="images/42.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/43.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/43.JPG" data-lightbox="mygallery" data-title="Heineken">
                             <img src="images/43.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/44.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/44.JPG" data-lightbox="mygallery" data-title="Pilsner Urquell">
                             <img src="images/44.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/31.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/31.JPG" data-lightbox="mygallery" data-title="Csapolt Dreher">
                             <img src="images/31.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/32.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/32.JPG" data-lightbox="mygallery" data-title="Csapolt Soproni">
                             <img src="images/32.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/34.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/34.JPG" data-lightbox="mygallery" data-title="Csapolt Mort Subite">
                             <img src="images/34.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/33.JPG" data-lightbox="mygallery" data-title="proba">
+                        <a href="images/33.JPG" data-lightbox="mygallery" data-title="Szent András - Áfonyás Ale">
                             <img src="images/33.JPG">
                         </a>
                     </figure>
