Translate theme button and change text sizes.

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#home-page">Főoldal</a></li>
                 <li><a href="#gallery">Galéria</a></li>
                 <li><a href="#about-us">Rólunk</a></li>
-                <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">ChangeTheme</button>
+                <button id="theme_switch" type="submit" class="stylebutton" onclick="changeTheme()">Sötét téma</button>
             </ul>
         </nav>
         <div class="nav-bar-bottom-border"></div>
