Added some text to the main page

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -29,11 +29,16 @@
 
             <section class="description">
                 <h3>Miről szól az oldal?</h3>
-                <p>Célunk egy galéria létrehozása, ahol különböző, hazánkban, első sorban Debrecenben is kapható
-                        sörfajtákat jelenítünk meg.</p> <br>
+                <p>Célunk egy galéria létrehozása volt, ahol különböző, hazánkban, első sorban Debrecenben is kapható
+                        sörfajtákat jelenítünk meg.
+                </p> <br>
                 <p>Különböző sörökről készült fényképeket mutatunk be, melléjük leírást illesztve, amiben leírjuk, hogy
-                        az általunk kedvelt Debreceni kocsmákban hol kaphatóak, és egyéb információkat.
-                </p>
+                        az általunk kedvelt Debreceni kocsmák közül hol kaphatóak és mennyiért.
+                </p> <br>
+                <p>Tanulmányi kirándulás révén, felkutattunk városunk ismertebb pub-jai közül néhányat, ahol 
+                        anyagot gyűjtöttünk ezen projekt elkészítéséhez.
+                        A Galériában megjelenő képek közül az összes saját készítésű.
+                </p> <br>
             </section>
         </div>
     </header>
